tests/snapshot/snapshots/snapshot__error_simple_contract_fail.ncl.snap
---
source: tests/snapshot/main.rs
assertion_line: 57
expression: snapshot
---
note: 
  ┌─ [INPUTS_PATH]/errors/simple_contract_fail.ncl:1:5
  │
1 │ 1 | String
  │     ^^^^^^ expected type

error: contract broken by a value
  ┌─ [INPUTS_PATH]/errors/simple_contract_fail.ncl:1:1
  │
1 │ 1 | String
  │ ^ applied to this expression


